src/components/styles/Hero.css
.hero-background-stars{
    background-image: url('../../assets/stars.png');
    background-size: cover;  
    animation: starsAnimation 600s linear infinite;
  }
@keyframes starsAnimation {

    0%{
        background-position: 0vw 0;
    }
    100%{
        background-position: -100vw 0;
    }

}
.hero-container{
    display: flex;
    justify-content: space-between;
    /* Filters the strength of the stars*/
    background-color:#06090fbb;
    height: 75vh;
    overflow: hidden;
    padding-top: 100px;
    padding-bottom: 50px;
    padding-left: 80px;
    padding-right: 80px;
}
.intro{
    margin-right:30px;
    border-radius: 10px;
    padding-bottom: 20px;
    
    
}

.greeting{
    font-size: 25px;
    color: white;
    margin-right: 12px;
    color:var(--primary);
    background-color: rgba(40, 94, 63, 0.334);
    display: inline-block;
    padding: 12px;
    border-radius: 7px;
    font-family:Bungee, Poetsen One;
    line-height: 25px;

    
}

.hero-title{
    color: white;
    font-size: 50px;
    font-family: Bungee;
    font-weight: bold;
    line-height:  50px;
}
.hero-title span{
    color:var(--primary);
}
.hero-about{
    color: #a8a7ab;
    font-family: 'Josefin Sans';
    font-size: 20px;
}

.hero-img{
    max-width: 450px;
    object-fit: contain;
    max-height:375px;
}
@media screen and (max-width:1227px) {
    .intro{
        margin-right: 0px;
    }
    .hero-container{
        flex-direction:column;
        height: auto;
        align-items: center;
        padding-left: 20px;
        padding-right: 20px;
    }
  }

